@@ -63,6 +63,9 @@ APR_INCLUDES=`$apr_config --includes`
 APR_VERSION=`$apr_config --version`
 APR_CONFIG="$apr_config"
 
+APR_SETIFNULL(LTFLAGS, "--silent")
+AC_SUBST(LTFLAGS)
+
 AC_SUBST(APR_LIBTOOL)
 AC_SUBST(APR_BINDIR)
 AC_SUBST(APR_INCLUDES)
